# xMIx

./: .gitignore  README.md  adding_a_new_class.txt  compilation_instructions.txt  llama_only_benchmark_matrix.yaml  mixtral_only_benchmark_matrix.yaml  output_comparison_matrix.yaml  qwen1.5_only_benchmark.yaml  qwen3_only_benchmark_matrix.yaml  requirements.txt  run_benchmark_matrix.py  run_output_comparison.py  set_cond.cubin
benchmarks/: bench_hparams.json  serve_hparams.json
benchmarks/Evaluation/: .gitignore  CompareAgainstBenchmarks.xlsx  pyproject.toml
benchmarks/Evaluation/Data/charts_20260505_091147_5_apps/llama_vanilla_run/: summary_llama_vanilla_run.csv
benchmarks/Evaluation/Data/charts_20260505_091147_5_apps/mixtral_app_2/: summary_mixtral_app_2.csv
benchmarks/Evaluation/Data/charts_20260505_091147_5_apps/mixtral_app_3/: summary_mixtral_app_3.csv
benchmarks/Evaluation/Data/charts_20260505_091147_5_apps/qwen3_app_1/: summary_qwen3_app_1.csv
benchmarks/Evaluation/Data/charts_20260505_091147_5_apps/qwen3_app_3/: summary_qwen3_app_3.csv
benchmarks/Evaluation/Data/charts_20260505_091147_5_apps/xlsx/: mixtral.xlsx  qwen3.xlsx
benchmarks/Evaluation/Data/xlsx_arxiv_version_4_6/: llama.xlsx  mixtral.xlsx  qwen.xlsx  qwen3.xlsx
benchmarks/Evaluation/Script/: __init__.py
benchmarks/Evaluation/Script/plot/: perf_report.py
benchmarks/Evaluation/Script/plot/easysteer/xlsx/: qwen.xlsx
benchmarks/Evaluation/Script/run/: perf_report.py
examples/: xmix_steering_demo.ipynb
synth_code/: app1_synth.py  steer_synth.py
vllm/compilation/: cuda_graph.py
(+212 files in other folders)
